--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ prost = "0.12"
 tokio = { version = "1.36", features = ["full", "macros", "rt-multi-thread"] }
 anyhow = "1.0"
 tracing = "0.1"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 x509-parser = "0.17.0"
 der-parser = "10.0.0"
 asn1-rs = "0.7.1"
@@ -25,6 +25,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 derive = "1.0.0"
 clap = { version = "4.5.34", features = ["derive"] }
 serde_json = "1.0.140"
+thiserror = "2.0.12"
 
 
 [build-dependencies]
