--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,9 @@ derive = "1.0.0"
 clap = { version = "4.5.34", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
+metrics-exporter-prometheus = "0.16.2"
+metrics = "0.24.1"
+rand = "0.9.0"
 
 
 [build-dependencies]
